--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lt_red">#FF6863</color>
+
+    <color name="divider">#33000000</color>
+    <color name="text_secondary">#808080</color>
 </resources>
