--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,8 @@
     <style name="TextSecondary14" parent="TextClassic14">
         <item name="android:textColor">@color/text_secondary</item>
     </style>
+
+    <style name="Circular50">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
